fix word wrap style

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -11,7 +11,7 @@
     width: 1140px;
     box-sizing: border-box;
     margin: 0 auto;
-    // word-break: break-all;
+    // word-break: break-word;
     .left {
         width: 75%;
         float: left;
@@ -24,7 +24,7 @@
             margin-bottom: -10px;
         }
         a:not([title]){
-            word-break: break-all;
+            word-break: break-word;
         }
         ul {
             >h2 {
@@ -107,8 +107,8 @@
             background-color: #f8f8fd;
             box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.3), 0 0 30px rgba(10, 10, 0, 0.1) inset;
             padding-bottom: 1px;
-            -ms-word-break: break-all;
-            word-break: break-all;
+            -ms-word-break: break-word;
+            word-break: break-word;
             /* Non standard for webkit */
             // word-break: break-word;
             -webkit-hyphens: auto;
